--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </head>
 <body>
 <center>
-<h1>WAR - What is it good for?</h1>
+<h1>WAR!</h1>
+<h2>What is it good for? Looking at the 2023 MLB leaders in Wins Above Replacement (WAR)</h2>
 <h3>October 6th</h3>
 <h3>by Jake Lang</h3>
 </center>
